--- a/index.html
+++ b/index.html
@@ -15,19 +15,70 @@
 
 
     <!-- Navigation -->
-
+    <div id="nav">
+        <a href="#home">HOME</a>
+        <a href="#about">ABOUT</a>
+        <a href="#services">SERVICES</a>
+        <a href="#contact">CONTACT</a>
+    </div>
+    
+    <!-- Home Section -->
+    <section id="home">
+        <div class="title-group">
+            <h1>Dog Care</h1>
+            <h2>Welcome to the Website!</h2>
+        </div>
+    </section>
 
 
     <!-- About Section -->
-
+    <section id="about">
+        <h1>Undraw Illustrations</h1>
+        <div class="about-container">
+            <div class="image-container">
+                <h2>Beach Day</h2>
+                <img src="./src/img/undraw_beach_day_light.svg" alt="beach-dog" id="image1">
+            </div>
+            <div class="image-container">
+                <h2>Passing by</h2>
+                <img src="./src/img/undraw_passing_by_light.svg" alt="Passing by dog" id="image2">              
+            </div>
+            <div class="image-container">
+                <h2>Playing Fetch and Toys</h2>
+                <img src="./src/img/undraw_playing_fetch_light.svg" alt="Dog playing fetch" id="image3">
+            </div>
+        </div>
+    </section>
 
 
     <!-- Services Section -->
-
+    <section id="services">
+        <h1>Services</h1>
+        <div class="buttons">
+            <button class="primary">Primary</button>
+            <button class="secondary">Secondary</button>
+            <button class="primary" disabled>Disabled</button>
+            <button class="outline">Outline</button>
+            <button class="secondary outline">Alt Outline</button>
+            <button class="outline" disabled>Disabled</button>
+        </div>
+        <div class="text-box" id="text-box">
+            <p>Lorem ipsum dolor amet consectetur adipisicing elit. Voluptatibus magnam sit alias eos ducimus expedita quam, corporis, blanditiis vel facilis, animi adipisci? Nemo enim quisquam maiores minima, qui omnis. Accusamus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem magnam accusamus qui, ab voluptates reprehenderit rerum quo mollitia libero asperiores doloremque dolores, nihil repellat doloribus perspiciatis magni dolore dolorum ipsam!</p>
+        </div>
+    </section>
 
 
     <!-- Contact Section -->
-
+    <section id="contact">
+        <div class="social-icons">
+            <i class="fab fa-github"></i>
+            <i class="fab fa-codepen"></i>
+            <i class="fab fa-linkedin-in"></i>
+            <i class="fab fa-medium"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-youtube"></i>
+        </div>
+    </section>
     
 
     <!-- Script -->
