--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <img src="./src/img/undraw_passing_by_light.svg" alt="Passing by dog" id="image2">              
             </div>
             <div class="image-container">
-                <h2>Playing Fetch and Toys</h2>
+                <h2>Playing Fetch</h2>
                 <img src="./src/img/undraw_playing_fetch_light.svg" alt="Dog playing fetch" id="image3">
             </div>
         </div>
