--- a/index.html
+++ b/index.html
@@ -11,16 +11,25 @@
 <body>
 
     <!-- Dark Mode Switch -->
-
+     <div class="theme-switch-wrapper">
+        <span id="toggle-icon">
+            <span class="toggle-text">Light Mode</span>
+            <i class="fas fa-sun"></i>
+        </span>
+        <label class="theme-switch">
+            <input type="checkbox">
+            <div class="slider round"></div>
+        </label>
+   </div>
 
 
     <!-- Navigation -->
-    <div id="nav">
+    <nav id="nav">
         <a href="#home">HOME</a>
         <a href="#about">ABOUT</a>
         <a href="#services">SERVICES</a>
         <a href="#contact">CONTACT</a>
-    </div>
+    </nav>
     
     <!-- Home Section -->
     <section id="home">
